--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
+    // Google API
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
+
 }
